[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "covid19-contacttracing-simulation"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
cryptography = "^2.9"
[tool.poetry.dev-dependencies]
